fixed number6 and added bullets and numbers?

--- a/index.html
+++ b/index.html
@@ -1,36 +1,59 @@
+
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title></title>
-  </head>
+
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title></title>
+</head>
+
 <body>
   <div>
     <nav>
       <ul class="topnav" id="myTopnav">
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="desabout.html">About</a></li>
-        </ul>
-
+      </ul>
     </nav>
   </div>
-    <section id="abmepg">
-        <div class="box"></div>
-          <section id="aboutme">
-            <img id="me" src="sue.jpg" alt="me">
-              <section id="summary" <p id="hello"> Hello! My name is<span id="sugey"> Sugey Valencia</span>.</p>
-                <p class="sum"> I am 20 something years old. I'm impulsive, adventurous and a social butterfly. I currently live in the rainy city of Seattle. </p>
-                <p class="sum">Currently in school for mobile and web development. Creating beautiful things with <span id="HTML">HTML, CSS & JavaScript!</span>.</p>
-                <p class="sum">I love family & friends, chocolate, chai tea/lattes , caramel macchiatos, sushi, any shade of blue, gold, musicals, and bath & body Japanese cherry blossom products </p>
-                <p class="sum">Not so fond of winter, frizzy hair, tuna sandwiches and the smell of lavender</p>
-            </section>
-        </section>
-    </section>
-  <div class="boxx"></div>
+  <section id="abmepg">
+    <div class="box"></div>
+    <section id="aboutme">
+      <img id="me" src="sue.jpg" alt="me">
+      <section id="summary">
+        <p id="hello"> Hello! My name is<span id="sugey"> Sugey Valencia</span>.</p>
+        <p id="hello">Experience & Education</p>
+        <ul>
+          <li class="sum">Education: Human Resources Degree- UMUC</li>
+          <li class="sum">Education: Software Development- Code Fellows</li>
+          <li class="sum">Work Experince: Aerospace Medic- USAF 2009-2012</li>
+          <li class="sum">Work Experince: Protocol Representative- Department of Defence/Pentagon  2012-2013 </li>
+          <li class="sum">Work Experince: Program Support Assistant- Deptartment of Veterans Affairs 2013-2014</li>
+          <li class="sum">Work Experince: Software Developer- Microsoft 2016-2017</li>
+        </ul>
+        <p id="hello">Top Ten about me</p>
+        <ol>
+          <li class="sum"> I am 20 something years old. </li>
+          <li class="sum">I am from Panama City, Panama</li>
+          <li class="sum">Former military Veteran. Airforce!</li>
+          <li class="sum"> For fun I like to take dance Salsa, Kizomba and Bachata</li>
+          <li class="sum"> I Don't know how to swim but I plan to learn how some day</li>
+          <li class="sum">I'm impulsive, adventurous and a social butterfly.</li>
+          <li class="sum"> I currently live in the rainy city of Seattle. </li>
+          <li class="sum">Currently in school for mobile and web development. Creating beautiful things with <span id="HTML">HTML, CSS & JavaScript!</span>.</li>
+          <li class="sum">I love family & friends, chocolate, chai tea/lattes , caramel macchiatos, sushi, any shade of blue, gold, musicals, and bath & body Japanese cherry blossom products </li>
+          <li class="sum">Not so fond of winter, frizzy hair, tuna sandwiches and the smell of lavender</p>
+          </ol>
 
-  
+        </section>
+      </section>
+    </section>
+    <div class="boxx"></div>
+
+
     <script src="https://use.fontawesome.com/fc08df0428.js"></script>
     <script src="app.js"></script>
-</body>
+  </body>
